# Smartknob

./: README.md
Electronics/Screen/: Exports.OutJob  Screen.PcbDoc  Screen.PrjPcb  Screen.step  Status Report.Txt
Electronics/Screen/BOM/: Bill of Materials-Screen.xlsx
Electronics/Screen/Gerber/: Screen.GBL  Screen.GBO  Screen.GBP  Screen.GBS  Screen.GM  Screen.GM3  Screen.GTL  Screen.GTO  Screen.GTP  Screen.GTS
Electronics/Screen/NC Drill/: Screen.DRR  Screen.LDP  Screen.TXT
Electronics/Screen/Schematics/: Main.SchDoc
Electronics/Smartknob/: Exports.OutJob  Main.SchDoc  Smartknob.OutJob  Smartknob.PcbDoc  Smartknob.PrjPcb  Smartknob.PrjPcbStructure  Status Report.Txt
Electronics/Smartknob/BOM/: Bill of Materials-Smartknob.xlsx
Electronics/Smartknob/Gerber/: Smartknob.G1  Smartknob.G2  Smartknob.GBL  Smartknob.GBO  Smartknob.GBP  Smartknob.GBS  Smartknob.GM  Smartknob.GM3  (+4 more)
Mechanical/Exports/: BaseMount.stl  Baseplate.stl  Enclosure.stl  Knob.stl  RotorSpacer.stl  ScreenPlatform.stl
Software/Smartknob/: CMakeLists.txt  main.cpp  pin_assignments.h
Software/Smartknob/lib/: CMakeLists.txt
Software/Smartknob/lib/FIR/: CMakeLists.txt  FIR.cpp  FIR.h
Software/Smartknob/lib/FOC/: CMakeLists.txt  FOC.cpp  FOC.h
Software/Smartknob/lib/MCP3564R/: CMakeLists.txt  MCP3564R.cpp  MCP3564R.h  MCP3564R_regs.h
Software/Smartknob/lib/MT6701/: CMakeLists.txt  MT6701.cpp  MT6701.h
Software/Smartknob/lib/PID/: CMakeLists.txt  PID.cpp  PID.h
Software/Smartknob/lib/SCD30/: SCD30.cpp
Software/Smartknob/lib/TMC6300/: CMakeLists.txt  TMC6300.cpp  TMC6300.h
(+20 files in other folders)
